--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "Luminance": "Luminance/"
+      "Luminance\\": "Luminance/"
     }
   },
   "version": "1.0.0",
